# Mental-companion-agent

./: README.md  frontend.py  main.py  pyproject.toml
backend/: agent.py  config.py  main.py  tools.py
