[project]
name = "mental-companion-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-google-genai>=2.1.9",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]
